[metadata]
name = atcoder_client_tools
version = 0.1.5
description = atcoder client tools

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    click
    beautifulsoup4
    selenium

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    act = atcoder.cli:main