[metadata]
name = pypro
version = 0.1.5
description = pypro

[options]
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    click
    beautifulsoup4
    selenium

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    pypa = pypro.atcoder:main